--- a/capitulo02.tex
+++ b/capitulo02.tex
@@ -536,6 +536,8 @@ métodos}\label{comparativa-entre-muxe9todos}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-11-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-11-3} \end{center}
+
 En estas primeras elecciones de 1977 podemos observar que la fuerza más
 votada en las elecciones es el partido \emph{Unión de Centro
 democrático} seguido del \emph{PSOE}. Observamos que según el método
@@ -603,6 +605,8 @@ métodos}\label{comparativa-entre-muxe9todos-1}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-20-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-20-3} \end{center}
+
 En estas elecciones de 1979 el partido más votado fué \emph{UCD} seguido
 del \emph{PSOE}, según los distintos métodos de reparto únicamente en el
 método Imperiali UCD conseguiría la mayoría absoluta, en todos los demás
@@ -649,6 +653,8 @@ métodos}\label{comparativa-entre-muxe9todos-2}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-29-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-29-3} \end{center}
+
 En estas elecciones de 1982 el partido más votado es el \emph{PSOE} el
 cual según la mayoría de los métodos de reparto, incluido el método
 D´Hondt, alcanza la mayoría absoluta. Son unas elecciones en los que el
@@ -692,6 +698,8 @@ métodos}\label{comparativa-entre-muxe9todos-3}}
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-38-1} \end{center}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-38-2} \end{center}
+
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-38-3} \end{center}
 
 En estas elecciones de 1986 el partido más votado fué el \emph{PSOE},
 tal y como sucedió en las anteriores elecciones, son también unas
@@ -741,6 +749,8 @@ métodos}\label{comparativa-entre-muxe9todos-4}}
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-47-1} \end{center}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-47-2} \end{center}
+
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-47-3} \end{center}
 
 En estas elecciones de 1989 el partido más votado es, como sucedió el
 las anteriores elecciones, el \emph{PSOE}, vemos como aparece por
@@ -794,6 +804,8 @@ métodos}\label{comparativa-entre-muxe9todos-5}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-56-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-56-3} \end{center}
+
 En las elecciones de 1993 podemos observar como la fuerza del primer
 partido va decreciendo lentamente. Los dos partidos más votados son el
 \emph{PSOE} y el \emph{PP} respectivamente, la diferencia estas
@@ -843,6 +855,8 @@ métodos}\label{comparativa-entre-muxe9todos-6}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-65-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-65-3} \end{center}
+
 En estas elecciones de 1996 son las primeras elecciones en donde el
 \emph{PP} son la fuerza más votada, el \emph{PSOE} que ya llevaba una
 tendencia descendiente al final ha perdido el primer puesto. Sigue
@@ -850,8 +864,8 @@ habiendo un bipartidismo significativo con dos partidos medianos,
 todavía el PP a pesar de ganar las elecciones no alcanza la mayoría
 absoluta en ninguno de los métodos analizados
 
-\hypertarget{disproporcionalidads}{%
-\subsubsection{Disproporcionalidads}\label{disproporcionalidads}}
+\hypertarget{disproporcionalidad-6}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-6}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-66-1} \end{center}
 
@@ -871,6 +885,8 @@ métodos}\label{comparativa-entre-muxe9todos-7}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-74-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-74-3} \end{center}
+
 En las elecciones del año 2000 el partido más votado vuelve a ser el
 \emph{Partido Popular} seguido del \emph{PSOE}, en estas elecciones
 según el método D´Hondt utilizado en España el PP conseguiría una
@@ -883,8 +899,8 @@ pequeños con menos de tres votos casi duplicar su presencia en escaños.
 El partido más castigado por utilizar el método D´Hondt en estas
 elecciones sigue siendo Izquierda Unida.
 
-\hypertarget{disproporcionalidad-6}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-6}}
+\hypertarget{disproporcionalidad-7}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-7}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-75-1} \end{center}
 
@@ -920,6 +936,8 @@ métodos}\label{comparativa-entre-muxe9todos-8}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-83-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-83-3} \end{center}
+
 En estas elecciones del año 2004 volvemos a ver unas elecciones con un
 claro bipartidismo y con una diferencia de escaños entre partidos cada
 vez menor, en estas elecciones el partido más votado cambia y el
@@ -934,8 +952,8 @@ en el caso de optar por el método Danish, en cambio el partido más
 castigado por el método D´Hondt, Izquierda Unida, hasta podría ver
 duplicado o triplicado su presencia en el congreso.
 
-\hypertarget{disproporcionalidad-7}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-7}}
+\hypertarget{disproporcionalidad-8}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-8}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-84-1} \end{center}
 
@@ -965,6 +983,8 @@ métodos}\label{comparativa-entre-muxe9todos-9}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-92-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-92-3} \end{center}
+
 En estos comicios del año 2008 no hay diferencias significativas en
 términos de escaños, sigue un claro bipartidismo con dos partidos
 hegemónicos, en primer lugar el más votado en estas elecciones que sigue
@@ -981,8 +1001,8 @@ el partido más perjudicado sigue siendo Izquierda Unida que podría en
 este año hasta mas que quintuplicar su presencia en el congreso de haber
 optado por el método Danish.
 
-\hypertarget{disproporcionalidad-8}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-8}}
+\hypertarget{disproporcionalidad-9}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-9}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-93-1} \end{center}
 
@@ -1014,6 +1034,8 @@ métodos}\label{comparativa-entre-muxe9todos-10}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-101-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-101-3} \end{center}
+
 Este año 2011 podemos considerarlo como el primer año en el que aunque
 siga sucediendo un claro bipartidismo empiezan a surgir partidos
 medianos con cada vez más presencia en el congreso, en este año es la
@@ -1036,8 +1058,8 @@ la diferencia de escaños a la mitad pero la diferencia más notoria está
 en los partidos medianos UPyD y IU, que pasarían de 5 a 41 escaños y de
 11 a 54 escaños respectivamente.
 
-\hypertarget{disproporcionalidad-9}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-9}}
+\hypertarget{disproporcionalidad-10}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-10}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-102-1} \end{center}
 
@@ -1073,6 +1095,8 @@ métodos}\label{comparativa-entre-muxe9todos-11}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-110-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-110-3} \end{center}
+
 En estas elecciones del 2014 ya vemos como habíamos predicho en las
 anteriores que el bipartidismo que veíamos omnipresente en todas las
 elecciones anteriores ahora ya no ocurre, es el primer año en el que se
@@ -1092,8 +1116,8 @@ supondría un cambio significativo. El partido más perjudicado este año
 vuelve a ser Izquierda Unida, que podría pasar de obtener 2 escaños con
 el método D´Hondt a 11 escaños con el Danish.
 
-\hypertarget{disproporcionalidad-10}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-10}}
+\hypertarget{disproporcionalidad-11}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-11}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-111-1} \end{center}
 
@@ -1126,6 +1150,8 @@ métodos}\label{comparativa-entre-muxe9todos-12}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-119-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-119-3} \end{center}
+
 En las elecciones del año 2016 vemos como se va consolidando el modelo
 de las anteriores elecciones, con dos grandes partidos y dos partidos
 medianos. La fuerza política más votada este año es el \emph{Partido
@@ -1139,8 +1165,8 @@ cambia significativamente el reparto de escaños, es notorio que en este
 año el PSOE obtenga casi los mismos votos independientemente del método
 utilizado.
 
-\hypertarget{disproporcionalidad-11}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-11}}
+\hypertarget{disproporcionalidad-12}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-12}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-120-1} \end{center}
 
@@ -1173,6 +1199,8 @@ métodos}\label{comparativa-entre-muxe9todos-13}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-128-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-128-3} \end{center}
+
 En estas elecciones de Abril de 2019 vemos como ya no existe
 bipartidismo, este año podemos agrupar a los partidos políticos en
 cuatro categorías, la primera en donde hay un partido con muchos votos
@@ -1189,8 +1217,8 @@ partido que se vería más beneficiado sería Vox seguido de Ciudadanos,
 partido que superaría en escaños al PP y se convertiría en la segunda
 fuerza en el hemiciclo.
 
-\hypertarget{disproporcionalidad-12}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-12}}
+\hypertarget{disproporcionalidad-13}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-13}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-129-1} \end{center}
 
@@ -1226,6 +1254,8 @@ métodos}\label{comparativa-entre-muxe9todos-14}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-137-2} \end{center}
 
+\begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-137-3} \end{center}
+
 En esta gráfica de las elecciones de Noviembre de 2019 podemos observar
 una ligera recuperación del bipartidismo en donde los dos principales
 partidos vuelven a aumentar el número de escaños obtenidos y también
@@ -1240,8 +1270,8 @@ más proporcional como pueda ser el Danish, que son los partidos de
 Podemos que pasarían de obtener 26 escaños a 40 y el partido Ciudadanos
 que pasaría a duplicar su presencia de 10 escaños a 23.
 
-\hypertarget{disproporcionalidad-13}{%
-\subsubsection{Disproporcionalidad}\label{disproporcionalidad-13}}
+\hypertarget{disproporcionalidad-14}{%
+\subsubsection{Disproporcionalidad}\label{disproporcionalidad-14}}
 
 \begin{center}\includegraphics[width=0.95\linewidth]{figurasR/unnamed-chunk-138-1} \end{center}
 
