--- a/capitulo02.Rmd
+++ b/capitulo02.Rmd
@@ -518,7 +518,22 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+
+library(ggpol)
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
+
+
 
 En estas primeras elecciones de 1977 podemos observar que la fuerza más votada en las elecciones es el partido *Unión de Centro democrático* seguido del *PSOE*. Observamos que según el método vigente en España, el método D´Hondt, el partido *UCD*, que ganaría las elecciones, tendría una gran diferencia de votos respecto a los demás partidos, por lo que facilitaría la gobernabilidad.
 
@@ -824,6 +839,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de 1979 el partido más votado fué *UCD* seguido del *PSOE*, según los distintos métodos de reparto únicamente en el método Imperiali UCD conseguiría la mayoría absoluta, en todos los demás métodos de reparto no se alcanza la mayoría absoluta, los partidos más castigados por utilizar el método D´Hondt son el partido comunista y coalición Democrática, que podrían hasta doblar el número de asientos obtenidos dependiendo del método de reparto que se haya realizado. En estas elecciones podemos decir que hay dos grandes partidos y dos medianos, UCD y el PSOE son los más grandes y el partido comunista y coalición democrática son los partidos medianos, después ya se encuentran todos los demás.
@@ -1120,6 +1145,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de 1982 el partido más votado es el *PSOE* el cual según la mayoría de los métodos de reparto, incluido el método D´Hondt, alcanza la mayoría absoluta. Son unas elecciones en los que el voto se concentra únicamente en dos partidos, que son el PSOE y Alianza Popular, pero con una gran diferencia de asientos entre ellos, donde el PSOE casi dobla en escaños a Alianza Popular. El partido menos beneficiado en este año es UCD, que según el método D´Hondt obtendría 11 escaños mientras que si se optase por otro método más proporcional como puede ser el método Danish o bien el Sainte-Lague podría multiplicar por 3 o 4 sus escaños.
@@ -1417,6 +1452,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de 1986 el partido más votado fué el *PSOE*, tal y como sucedió en las anteriores elecciones, son también unas elecciones en donde hay únicamente dos partidos mayoritarios, *PSOE* y *Coalición Popular*, ocurre en estas elecciones el mismo escenario que en las anteriores elecciones, en donde el primer partido casi dobla en escaños al segundo partido, aunque en este caso ya se puede apreciar que la diferencia se va reduciendo entre los dos grandes partidos, en general el PSOE alcanza la mayoría absoluta pero en este año si utilizásemos los métodos más proporcionados es interesante observar como perdería la mayoría absoluta tanto utilizando el método Danish como el Sainte-Lague.
@@ -1714,6 +1759,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de 1989 el partido más votado es, como sucedió el las anteriores elecciones, el *PSOE*, vemos como aparece por primera vez el Partido Popular como segunda fuerza tomando el puesto que antes tenía Coalición Popular, estas elecciones también son muy bipartidistas aunque se va debilitando ese bipartidismo, ahora podemos decir que hay dos partidos hegemónicos, PSOE y PP, y tres partidos medianos, los cuales serían el Centro Democrático y Social, Izquierda Unida y Convergencia y Unión, de todos estos partidos los más desfavorecidos por la utilización del método D´Hondt son IU y Centro Democrático, los cuales de haber utilizado los métodos más proporcionales podrían hasta duplicar su presencia en el congreso. Por la otra parte en el caso del PSOE pasaría de alcanzar la mayoría absoluta justa con 175 escaños a perder la mayoría absoluta en el caso de optar por los métodos más proporcionales.
@@ -2012,6 +2067,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En las elecciones de 1993 podemos observar como la fuerza del primer partido va decreciendo lentamente. Los dos partidos más votados son el *PSOE* y el *PP* respectivamente, la diferencia estas elecciones es que el PSOE ha perdido la mayoría absoluta según el método D´Hondt y en cambio el PP ha aumentado su presencia significativamente y está ya relativamente cerca de alcanzar al PSOE. De haber utilizado los métodos más proporcionales resultaría en una menor diferencia de escaños entre estos dos grandes partidos, el partido más castigado en estas elecciones sigue siendo IU, el cual podría haber obtenido de 1.5 a 2 veces más asientos de haber cambiado de método de reparto.
@@ -2309,11 +2374,21 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de 1996 son las primeras elecciones en donde el *PP* son la fuerza más votada, el *PSOE* que ya llevaba una tendencia descendiente al final ha perdido el primer puesto. Sigue habiendo un bipartidismo significativo con dos partidos medianos, todavía el PP a pesar de ganar las elecciones no alcanza la mayoría absoluta en ninguno de los métodos analizados
 
-#### Disproporcionalidads
+#### Disproporcionalidad
 ```{r}
 metodos <- c("D´Hondt", "Danish", "Sainte-Lague", "Modified Sainte-Lague", "Adams", "Huntington-Hill", "Imperiali")
 
@@ -2603,6 +2678,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En las elecciones del año 2000 el partido más votado vuelve a ser el *Partido Popular* seguido del *PSOE*, en estas elecciones según el método D´Hondt utilizado en España el PP conseguiría una mayoría absoluta holgada, es una elección con un claro bipartidismo donde se podría decir que no existen partidos medianos. 
@@ -2901,6 +2986,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones del año 2004 volvemos a ver unas elecciones con un claro bipartidismo y con una diferencia de escaños entre partidos cada vez menor, en estas elecciones el partido más votado cambia y el *PSOE* obtiene los mayores votos, seguido del *PP* que pierde la mayoría absoluta según D´Hont que tenía en las anteriores elecciones. 
@@ -3199,6 +3294,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estos comicios del año 2008 no hay diferencias significativas en términos de escaños, sigue un claro bipartidismo con dos partidos hegemónicos, en primer lugar el más votado en estas elecciones que sigue siendo el *PSOE* seguido por el *PP*, la diferencia de escaños entre ellos continúa siendo prácticamente la misma pero en este año el bipartidismo es cada vez más pronunciado, aumentando ambos partidos su presencia en el congreso.
@@ -3496,6 +3601,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 Este año 2011 podemos considerarlo como el primer año en el que aunque siga sucediendo un claro bipartidismo empiezan a surgir partidos medianos con cada vez más presencia en el congreso, en este año es la aparición de UPyD. 
@@ -3796,6 +3911,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones del 2014 ya vemos como habíamos predicho en las anteriores que el bipartidismo que veíamos omnipresente en todas las elecciones anteriores ahora ya no ocurre, es el primer año en el que se puede afirmar que ya no hay bipartidismo.
@@ -4093,6 +4218,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En las elecciones del año 2016 vemos como se va consolidando el modelo de las anteriores elecciones, con dos grandes partidos y dos partidos medianos. La fuerza política más votada este año es el *Partido Popular* seguido del *PSOE*, en ningún método el PP alcanzaría la mayoría absoluta, son unas elecciones que no presentan diferencias significativas al cambiar de método de reparto, en el caso de utilizar el método Danish respecto al D´Hondt resultaría en un menor número de escaños para el PP y una ligera subida de escaños de Podemos y Ciudadanos.
@@ -4390,6 +4525,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En estas elecciones de Abril de 2019 vemos como ya no existe bipartidismo, este año podemos agrupar a los partidos políticos en cuatro categorías, la primera en donde hay un partido con muchos votos con una gran diferencia de escaños respecto a los demás, que es el PSOE, un segundo grupo en donde se encontrarían dos partidos con un número medio-alto de escaños, que son el PP y Ciudadanos respectivamente, un tercer grupo con un número mediano de escaños con Podemos y Vox, y un último grupo de pocos escaños con los demás partidos.
@@ -4689,6 +4834,16 @@ ggplot(fe, aes(Partidos, Metodo)) +
   geom_text(aes(label = Asientos))+
   labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
   guides(fill = "none")
+
+ggplot(fe) + 
+  geom_parliament(aes(seats = Asientos, fill = Partidos), color = "black") + 
+  scale_fill_manual(values=1+seq_len(length(fe[fe$Metodo=="D´Hondt",]$Partidos))  , labels = fe[fe$Metodo=="D´Hondt",]$Partidos) +
+  coord_fixed() + 
+  theme_void()+
+  labs(title = "Asientos según el método de reparto",subtitle = "En los partidos más votados",caption = "Angel Gonzalez",x=NULL,y=NULL)+
+  facet_wrap(Metodo~.)+theme(legend.position = c(0.7, 0.1),
+                             legend.key.size = unit(.2, "cm"),
+  legend.key.width = unit(0.2,"cm") ,legend.text = element_text(size=6, face="bold"))
 ```
 
 En esta gráfica de las elecciones de Noviembre de 2019 podemos observar una ligera recuperación del bipartidismo en donde los dos principales partidos vuelven a aumentar el número de escaños obtenidos y también aumentar la diferencia en escaños respecto a los demás.
